@@ -42,3 +42,4 @@ CAY-2762 Modeler: Difference in toolbars colors on OSX
 CAY-2764 Split expressions do not work with DB relationships
 CAY-2765 dbimport: check excluded catalogs and schemas for the SQLServer
 CAY-2774 Overriding service ordering in DI List causes DIRuntimeException
+CAY-2782 Modeler: save button becomes active on DataMap comment field focus
